create application database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
 
     <string name="app_name">android manager</string>
-
+    <string name="launch_failed">launch %s failed</string>
 </resources>
