--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">大总管</string>
-    <string name="launch_failed">打开%s失败</string>
-
+    <string name="failed_launch">打开%s失败</string>
+    <string name="failed">操作失败</string>
 </resources>
